# plon

./: .claude_task_a08404b6-d021-479e-8f4d-646e52aa2c58.md  .claude_task_b17b2a0e-29b4-4b53-bbb9-6bfd5dc91af3.md  .claude_task_df0c9dd0-eacd-4a82-aa32-e3bd0c341636.md  .claude_task_e4e111ac-3b3b-41c6-9d9d-949a2bc85a74.md  .claude_task_f68f680f-bfa1-40a2-a3ca-9f9efc173577.md  .gitignore  AUTO_SUMMARIZE_FEATURE.md  CLAUDE_CODE_INTEGRATION.md  CLAUDE_CODE_TESTING.md  COMPILATION_FIXES.md  Cargo.toml  DEVELOPMENT_CHECKLIST.md  DIOXUS_MIGRATION.md  DRAG_DROP_IMPROVEMENTS.md  Dioxus.toml  E2E_TEST_REPORT.md  FREEZE_FIX.md  HOW_TO_RUN.md  MACOS_APP_INSTALL.md  MAP_PAN_ZOOM_IMPLEMENTATION.md  PANNING_FIX_SUMMARY.md  README.md  RUN_TESTS.md  TESTING.md  TEST_SUMMARY.md  TODO_CLAUDE.md  claude_instructions.md  claude_task.md  demo_auto_summarize.rs  fix_all.sh  index.html  package-lock.json  package.json  playwright.config.ts  plon.db  run-e2e-tests.sh  run-kanban-tdd.sh  run_claude.sh  run_claude_code_tests.sh  setup-playwright.sh  (+25 more)
.github/workflows/: test.yml
.sqlx/: query-34e413901c926359e19fceac7f38d42a401c90b1305f547288f0d51c0a332708.json  query-368a67e5cd9e0cd16f46131d4b18eb42efacf3d31cf7c7c3d4d7dda4635bfc62.json
benches/: performance_benchmark.rs
data/: plon.db
docs/: accessing-settings.md  claude-config-admin.md
e2e-tests/: drag-drop-edge-cases.spec.ts  kanban-db-persistence.spec.ts  kanban-drag-drop.spec.ts  kanban-ordering.spec.ts  kanban-persistence.spec.ts  kanban-rendering.spec.ts  kanban-tdd.spec.ts  kanban-view.spec.ts  list-view.spec.ts  map-dependency.spec.ts  map-drag.spec.ts  map-view.spec.ts  quick-bug-check.spec.ts  test-dependency-persistence.spec.ts  test-helpers.ts  timeline-view.spec.ts
examples/: map_pan_zoom_demo.rs  task_config_demo.rs  timeline_autoscroll_detector.rs
macos/: build_mac_app.sh  create_icon.sh  install_app.sh  install_cli.sh
migrations/: 001_initial_schema.sql  20240101000000_initial_schema.sql  20240101000006_create_task_executions.sql  20240102000000_task_configurations.sql  20240103000000_claude_code_integration.sql  20240104000000_add_sort_order.sql  20250101000000_create_app_settings_table.sql  20250901000000_add_workspace_config.sql
playwright-report/: index.html
scripts/: Cargo.toml  generate_test_data.rs
src/: lib.rs  main.rs  main2.rs  main_fixed.rs  simple_main.rs  test_gui.rs  test_helpers.rs
src/config/: claude_config.rs  mod.rs
src/domain/: app_settings.rs  claude_code.rs  comment.rs  dependency.rs  goal.rs  goal_tests.rs  metadata.rs  mod.rs  recurring.rs  recurring_tests.rs  resource.rs  task.rs  task_config.rs  task_dependencies_test.rs  task_execution.rs  task_validation.rs
src/repository/: app_settings_repository.rs  claude_code_repository.rs  comment_repository.rs  database.rs  dependency_repository.rs  goal_repository.rs  mod.rs  recurring_repository.rs  resource_repository.rs  task_config_repository.rs  task_execution_repository.rs  task_repository.rs
src/services/: auto_run_e2e_tests.rs  auto_run_orchestrator.rs  auto_run_orchestrator_improvements.rs  claude_automation.rs  claude_automation_e2e_tests.rs  claude_code_service.rs  claude_code_service_tests.rs  claude_console.rs  claude_console_tests.rs  claude_monitor.rs  command_executor.rs  dependency_service.rs  error_handling.rs  error_recovery_tests.rs  export_service.rs  goal_service.rs  mod.rs  pr_monitor.rs  pr_review_service.rs  race_condition_fixes.rs  recurring_service.rs  resource_service.rs  scheduler.rs  stress_tests.rs  summarization.rs  task_config_service.rs  task_dependency_service.rs  task_service.rs  time_tracking_service.rs  timeline_scheduler.rs  validation.rs  workspace_service.rs  workspace_service_test.rs
src/ui/: app.rs  mod.rs
src/ui_dioxus/: app.rs  app_simple.rs  app_test.rs  mod.rs  router.rs  router_simple.rs  state.rs  state_simple.rs
src/utils/: mod.rs
test-results/drag-drop-edge-cases-Drag--4038e--drags-race-condition-test--chromium/: error-context.md
test-results/drag-drop-edge-cases-Drag--64bfd--handle-drag-to-same-column-chromium/: error-context.md
tests/: app_kanban_integration_test.rs  auto_arrange_tests.rs  auto_summarize_tests.rs  beachball_fix_final.rs  beachball_fix_summary.md  claude_code_test_utils.rs  claude_hanging_test.rs  claude_launch_test.rs  comprehensive_kanban_test.rs  comprehensive_ui_tests.rs  dashboard_integration_tests.rs  dependency_planning_tests.rs  dependency_repository_test.rs  dependency_ui_tests.rs  final_performance_verification.rs  gantt_chart_tests.rs  gantt_interactive_integration_test.rs  gantt_view_test.rs  goal_creation_tests.rs  goal_creation_timeline_test.rs  gui_beachball_test.rs  headless_ui_tests.rs  integration_test.rs  integration_tests.rs  kanban_board_tests.rs  kanban_card_menu_tests.rs  kanban_card_visual_tests.rs  kanban_column_layout_tests.rs  kanban_drag_drop_comprehensive_tests.rs  kanban_enhanced_basic_test.rs  kanban_height_test.rs  kanban_inline_editing_tests.rs  kanban_rendering_issues_test.rs  kanban_smooth_resize_tests.rs  kanban_trello_style_drag_drop_tests.rs  kanban_ui_enhanced_tests.rs  kanban_view_integration_tests.rs  list_view_beachball_test.rs  list_view_e2e_performance_test.rs  list_view_fix_verification_test.rs  (+59 more)
tests/disabled/: auto_arrange_tests.rs  claude_automation_tests.rs  claude_code_integration_tests.rs  claude_config_tests.rs  claude_integration_e2e_test.rs  goal_creation_tests.rs  goal_creation_timeline_test.rs  headless_ui_tests.rs  integration_tests.rs  kanban_board_tests.rs  kanban_height_test.rs  map_pan_zoom_tests.rs  map_view_panning_simple_test.rs  recurring_editor_test.rs  recurring_service_tests.rs  resource_view_tests.rs  simple_pan_test.rs  task_editor_integration_tests.rs  task_persistence_test.rs  test_dioxus_components.rs  test_map_view_ui.rs  test_modal_functionality.rs  test_monitoring_ui.rs  test_performance.rs  test_settings_e2e.rs  test_task_creation_ui.rs  test_task_filters.rs  test_task_search.rs  timeline_auto_scroll_detection.rs  timeline_infinite_scroll_detection_test.rs  timeline_screenshot_test.rs  (+6 more)
(+104 files in other folders)
