[package]
name = "plon"
version = "0.1.0"
edition = "2024"

[lib]
name = "plon"
path = "src/lib.rs"

[[bin]]
name = "plon"
path = "src/main.rs"

[[bin]]
name = "test_gui"
path = "src/test_gui.rs"

[[bin]]
name = "plon_simple"
path = "src/simple_main.rs"

[[bin]]
name = "plon_fixed"
path = "src/main_fixed.rs"

[dependencies]
# Core
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"

# UI - Using egui for immediate mode high-performance GUI
eframe = "0.25"
egui = "0.25"
egui_extras = "0.25"
egui_plot = "0.25"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }

# Data structures and algorithms
petgraph = "0.6"  # For dependency graphs
rstar = "0.12"  # For spatial indexing in map view
ordered-float = "4.2"  # For floating point comparisons

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Text processing
pulldown-cmark = "0.9"  # Markdown parsing
regex = "1.10"

# Parallelism
rayon = "1.8"

# UUID for IDs
uuid = { version = "1.6", features = ["v4", "serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# AI Integration (for summarization)
reqwest = { version = "0.11", features = ["json"] }

# Testing utilities
mockall = "0.12"

[dev-dependencies]
criterion = "0.5"  # For benchmarking
tempfile = "3.8"  # For test databases
fake = "2.9"  # For generating test data
rstest = "0.18"  # For parameterized tests
futures = "0.3"  # For async utilities in tests

