[package]
name = "plon"
version = "0.1.0"
edition = "2024"

[lib]
name = "plon"
path = "src/lib.rs"

# Main application - just run: cargo run
[[bin]]
name = "plon"
path = "src/main.rs"

[dependencies]
# Core
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
image = "0.24"  # For screenshot analysis in tests
parking_lot = "0.12"  # For thread-safe mutexes in tests

# UI - Migrating to Dioxus for reactive UI
dioxus = { version = "0.5", features = ["desktop", "web", "router"] }
dioxus-desktop = "0.5"
dioxus-web = "0.5"
dioxus-router = "0.5"
dioxus-hooks = "0.5"
fermi = "0.4"  # State management for Dioxus


# Web platform support
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Document", "Element", "HtmlElement", "CssStyleDeclaration"] }
js-sys = "0.3"
wasm-logger = "0.2"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid", "migrate"] }

# Data structures and algorithms
petgraph = "0.6"  # For dependency graphs
rstar = "0.12"  # For spatial indexing in map view
ordered-float = "4.2"  # For floating point comparisons

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Text processing
pulldown-cmark = "0.9"  # Markdown parsing
regex = "1.10"

# Parallelism
rayon = "1.8"

# UUID for IDs
uuid = { version = "1.6", features = ["v4", "serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# AI Integration (for summarization)
reqwest = { version = "0.11", features = ["json"] }

# Testing utilities
mockall = "0.12"

[dev-dependencies]
# Testing
criterion = "0.5"  # For benchmarking
tempfile = "3.8"  # For test databases
rstest = "0.18"  # For parameterized tests
futures = "0.3"  # For async utilities in tests
rand = "0.8"  # For random number generation in benchmarks
image = "0.24"  # For screenshot capture and comparison
imageproc = "0.23"  # For image processing in tests

# For Playwright integration tests (we'll use Node.js/npm for actual Playwright)
wasm-bindgen-test = "0.3"
serial_test = "3.0"  # For serializing tests that interact with the browser
enigo = "0.6.1"

[[bench]]
name = "performance_benchmark"
harness = false

[[bench]]
name = "claude_code_performance_tests"
harness = false
path = "tests/claude_code_performance_tests.rs"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"


